...
  Widget build(BuildContext context) {
    final currentScreenHeight = MediaQuery.of(context).size.height;

    return Scaffold(
      backgroundColor: const Color.fromARGB(255, 241, 222, 255),
      appBar: AppBar(
        title: const Text("QnA Forum"),
        backgroundColor: Colors.deepPurple,
      ),
      drawer: InAppDrawer.gibDrawer(context, widget.user),
      body: SingleChildScrollView(
        child: Center(
          child: Column(
...
                ),
                child: ModuleList.createListing(module),
              ),
              Tooltip(
                message: "Next!",
                child: ElevatedButton(
                  key: const Key("nextButton"),
                  style: ElevatedButton.styleFrom(
                    primary: Colors.deepPurple,
                  ),
                  onPressed: _submit,
                  child: const Icon(Icons.arrow_right),
                ),
...
